# 12th_homework

./: .gitignore  main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: user.py
src/services/: auth.py
